add home fragment to add home navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="eventDate">Date</string>
     <string name="eventSpaceLeft">Available seats</string>
     <string name="register">Register</string>
+    <string name="home">Home</string>
 </resources>
