--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="eventSpaceLeft">Available seats</string>
     <string name="register">Register</string>
     <string name="home">Home</string>
+    <string name="search_here">Search here...</string>
+    <string name="settings">Settings</string>
+    <string name="mode">Mode</string>
+    <string name="dark_mode">Dark mode</string>
+    <string name="general">General</string>
+    <string name="notification">Enable notifications</string>
 </resources>
