--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="error_message">Something went wrong</string>
     <string name="save_favourite">Save Favourite\n</string>
     <string name="favourie">Favourite</string>
+    <string name="permission_success">Notification permission granted</string>
+    <string name="permission_fail">Notification permission rejected</string>
 </resources>
